--- a/components/Menu/menu-burger.module.scss
+++ b/components/Menu/menu-burger.module.scss
@@ -13,7 +13,7 @@
 }
 
 .top {
-  stroke-dasharray: 40 130;
+  stroke-dasharray: 20 130;
 }
 
 .middle {
@@ -21,7 +21,7 @@
 }
 
 .bottom {
-  stroke-dasharray: 40 205;
+  stroke-dasharray: 30 205;
 }
 
 .iconActive {
