--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,6 +19,7 @@ html {
 }
 
 body {
+  max-width: 100vw;
   color: var(--font-colour);
   font-family: "Space Grotesk", sans-serif;
   background-color: var(--bg-colour);
